@startuml
title US102 - Register an Aircraft Instance - Domain Model

package "Aircraft Model Aggregate" {
    class AircraftModel <<root>> <<entity>> {
        - manufacturer: String
        - model_name: String
    }
}

package "Aircraft Aggregate" {

    class Aircraft <<root>> <<entity>> {
        - last_maintenance: Date
        - days_since_last_maintenance: int
    }

    class RegistrationID <<value object>> {
        - registration_number: String
    }

    class ManufacturingDate <<value object>> {
        - date: Date
    }

    class SeatingCapacity <<value object>> {
        - capacity: int
    }

    enum AircraftStatus <<enum>> {
        ACTIVE
        INACTIVE
        UNDER_MAINTENANCE
    }

    Aircraft o--> "1" RegistrationID
    Aircraft o--> "1" ManufacturingDate
    Aircraft o--> "1" SeatingCapacity
    Aircraft o--> "1" AircraftStatus
    Aircraft --> "1" AircraftModel : "has an"
}
@enduml